# proxydroid-cn

./: README.md  build.gradle  gradle.properties  privacy_policy.md
.github/workflows/: android-build.yml  build.yml
app/: build.gradle
app/src/androidTest/java/org/proxydroid/: ExampleInstrumentedTest.kt  HostHttpConnectProxyIntegrationTest.kt  HostSocks5ProxyIntegrationTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  placeholder.c
app/src/main/java/com/ksmaze/android/preference/: ListPreferenceMultiSelect.kt
app/src/main/java/org/proxydroid/: AppManager.kt  BypassListActivity.kt  ConnectivityBroadcastReceiver.kt  Profile.kt  ProxyDroid.kt  ProxyDroidApplication.kt  ProxyDroidReceiver.kt  ProxyDroidVpnService.kt  ProxyDroidWidgetProvider.kt
app/src/main/java/org/proxydroid/ui/: DrawablePainter.kt  MainScreen.kt  MainViewModel.kt
app/src/main/java/org/proxydroid/utils/: Base64.kt  Constraints.kt  ProxyController.kt  Tun2SocksHelper.kt  Utils.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/rust/proxydroid-tun2socks/: Cargo.toml
app/src/main/rust/proxydroid-tun2socks/src/: auth_e2e_tests.rs  doh_client.rs  error.rs  lib.rs  logging.rs  protect.rs  tun2socks.rs
app/src/test/java/org/proxydroid/: ExampleUnitTest.kt
gradle/: libs.versions.toml
scripts/: http_connect_test_server.py  run_emulator_tests.sh  run_integration_tests.sh  run_local_emulator_tests.sh  socks5_test_server.py  test_http_proxy.py
(+1 files in other folders)
